# vortek

./: .gitignore  CMakeLists.txt  README.md  build.sh  vortek_icd.aarch64.json
.github/workflows/: main.yml
include/: arrays.h  descriptor_update_template.h  events.h  request_codes.h  ring_buffer.h  socket_utils.h  string_utils.h  thread_pool.h  time_utils.h  vk_object.h  vk_object_pool.h  vortek.h  vortek_serializer.h  winlator.h
src/: arrays.c  descriptor_update_template.c  main.c  ring_buffer.c  vk_object.c  vk_object_pool.c  vulkan_calls.c
